# deviceInfo

./: README.md  settings.gradle
app/: CMakeLists.txt  build.gradle
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: JniMethod.cpp  JniMethod.h  Utils.cpp  Utils.h  jni_method_register.cpp  jni_method_register.h  native-lib.cpp
app/src/main/java/com/kkxl/deviceinfo/: Agent.java  BuildInfo.java  MainActivity.java  MainApplication.java
app/src/main/java/com/kkxl/deviceinfo/httpServer/: AbsHtml.java  HtmlDefault.java  HttpdSevices.java  IhtmlTemplate.java  NanoHTTPD.java
app/src/main/java/com/kkxl/deviceinfo/infoManager/: InfoManager.java
app/src/main/java/com/kkxl/deviceinfo/util/: JniMethodUtils.java  Utils.java
app/src/main/java/com/kkxl/deviceinfo/util/reflect/: Reflect.java  ReflectException.java
gradle/wrapper/: gradle-wrapper.properties
jni-service/: CMakeLists.txt  build.gradle
jni-service/src/main/jni/main/: Android.mk  Application.mk  main.cpp  native-lib.cpp
